[package]
name = "generate_parentheses"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memuse = "0.2.0"
human_bytes = "0.3"
clap = {version = "3.2", features = ["derive"]}
itertools = "0.10"
termcolor = "1.1"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmark"
harness = false